# src/api/v1/admin/help/index.js
@@ -2,5 +2,6 @@ const router = require('express').Router();
 const helpController = require('./help.controller');
 
 router.get('/', helpController.getHelps);
+router.patch('/:id', helpController.updateHelp);
 
 module.exports = router;
