# src/validators/help.js
@@ -5,6 +5,12 @@ const helpSchema = joi.object({
   content: joi.string().empty('').required(),
 });
 
+const helpUpdateSchema = joi.object({
+  processing_status: joi.string().valid('pending', 'complete', 'cancel'),
+  reply_by_admin: joi.string(),
+});
+
 module.exports = {
-  helpSchema
+  helpSchema,
+  helpUpdateSchema,
 };
